syntax = "proto3";

import "google/protobuf/timestamp.proto";

package pbce;

option go_package = "github.com/TencentBlueKing/bk-bcs/bcs-services/bcs-bscp/pkg/protocol/core/client-event;pbce";

// ClientEvent source resource reference: pkg/dal/table/client-event.go
message ClientEvent {
  uint32 id = 1;
  ClientEventSpec spec = 2;
  ClientEventAttachment attachment = 3;
  google.protobuf.Timestamp heartbeat_time = 4;
  string message_type = 5;
  string original_release_name = 6;
  string target_release_name = 7;
}

// ClientEventSpec source resource reference: pkg/dal/table/client-event.go
message ClientEventSpec {
  uint32 original_release_id = 1;
  uint32 target_release_id = 2;
  google.protobuf.Timestamp start_time = 3;
  google.protobuf.Timestamp end_time = 4;
  double total_seconds = 5;
  double total_file_size = 6;
  double download_file_size = 7;
  uint32 total_file_num = 8;
  uint32 download_file_num = 9;
  string release_change_status = 10;
  string release_change_failed_reason = 11;
  string failed_detail_reason = 12;
}

// ClientEventAttachment source resource reference: pkg/dal/table/client-event.go
message ClientEventAttachment {
  uint32 client_id = 1;
  string uid = 2;
  uint32 biz_id = 3;
  uint32 app_id = 4;
  string client_mode = 5;
  string cursor_id = 6;
}
